完成后勤类报修单填写页面

--- a/888repair/Views/Kind/KindMatchIndex.cshtml
+++ b/888repair/Views/Kind/KindMatchIndex.cshtml
@@ -99,7 +99,7 @@
         <div class="layui-inline">
             <label class="layui-form-label">姓名&nbsp;&nbsp;<label style="color:red">*</label></label>
             <div class="layui-input-block" style="width:300px" id="checkSC2">
-                <select ID="addOpEmpNo" name="addOpEmpNo" lay-filter="addOpEmpNofilter" lay-verify="required">
+                <select ID="addOpEmpNo" name="addOpEmpNo" lay-filter="addOpEmpNofilter" lay-verify="required" lay-search="">
                     <option value=""></option>
                 </select>
             </div>
