--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -53,6 +53,7 @@
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <ul class="layui-nav layui-nav-tree Menu" lay-filter="test" id="Menu">
                     <li class="layui-nav-item current" data-id="fill"><a class="layui-nav-item " language="fill">填写问题</a></li>
+                    <li class="layui-nav-item current" data-id="personalProblem"><a class="layui-nav-item ">个人问题列表</a></li>
                     <li class="layui-nav-item" data-id="areaMatch"><a class="layui-nav-item ">辖区配对维护</a></li>
                     <li class="layui-nav-item" data-id="kindMatch"><a class="layui-nav-item ">业管配对维护</a></li>
                     @*<li class="layui-nav-item" data-id="fillQuestion"><a class="layui-nav-item ">业管配对维护</a></li>*@
@@ -167,7 +168,11 @@
                 case "#fillQuestion":
                     pathn = "@(Url.Action("RepairIndex", "Repair"))",
                         i = 0;
-                    break;
+                    break; 
+                case "#personalProblem":
+                    pathn = "@(Url.Action("RersonalProblemIndex", "Repair"))",
+                        i = 0;
+                    break; personalProblem
                 default:
                     pathn = "@(Url.Action("GroupIndex", "Group"))",
                         i = 0;
