个人问题列表增加 栏位 请修编号

--- a/888repair/Views/Repair/RersonalProblemIndex.cshtml
+++ b/888repair/Views/Repair/RersonalProblemIndex.cshtml
@@ -126,7 +126,7 @@
                             , toolbar: true
                             , cols: [[
                                // { type: 'checkbox', LAY_CHECKED: false},
-                               // { field: 'AreaId', title: 'AreaId' },
+                                { field: 'RepairId', title: '请修编号', width: 180 },
                                 { field: 'SystemCategory', title: 'SystemCategory(系统类别)', width: 210 },
                                 { field: 'Building', title: 'Building(大楼别)', width: 210 },
                                 { field: 'Loaction', title: 'Loaction(位置)', width: 210 },
