填写报修单时，图片重命名的时间戳到秒，补上新提单的状态

--- a/888repair/Views/Repair/ITRepairVw.cshtml
+++ b/888repair/Views/Repair/ITRepairVw.cshtml
@@ -333,7 +333,7 @@
 
         reloadDate();
 
-        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMdd");
+        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHHmmss");
         
         ////自定义验证规则
         //form.verify({
