--- a/888repair/Views/Repair/LogRepairVw.cshtml
+++ b/888repair/Views/Repair/LogRepairVw.cshtml
@@ -335,7 +335,7 @@
 
         reloadDate();
 
-        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMdd");
+        var datetime = layui.util.toDateString(new Date().getTime(), "yyyyMMddHHmmss");
 
         ////自定义验证规则
         //form.verify({
