--- a/888repair/Views/Repair/RersonalProblemIndex.cshtml
+++ b/888repair/Views/Repair/RersonalProblemIndex.cshtml
@@ -248,7 +248,7 @@
                 Status: $('#Status').val(),
             };
 
-            fetch('/Repair/RersonalProblemExport', {
+            fetch("@(Url.Action("RersonalProblemExport", "Repair"))", {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
